--- a/src/components/blocks/common/contact-form.pug
+++ b/src/components/blocks/common/contact-form.pug
@@ -1,6 +1,6 @@
 mixin contact-form(className)
   .contact-form
-    h2.contact-form__title.title.title--small Проконсультируем по ценам и срокам
+    h2.contact-form__title.title.title--special-small Проконсультируем по ценам и срокам
     .contact-form__subtitle Свяжемся в течение 5 минут
     .contact-form__form
       input.contact-form__destination(type="hidden")
