--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -21,6 +21,7 @@ include ./blocks/common/header-bar
 include ./blocks/common/search-modal
 include ./blocks/common/popup
 include ./blocks/common/contact-form
+include ./blocks/common/cart
 
 //- page-name..
 include ./blocks/index/intro
