--- a/src/components/layout/footer.pug
+++ b/src/components/layout/footer.pug
@@ -142,6 +142,10 @@ mixin footer(footerMods)
               li
                 +link({href: option.link, text: option.nameItem, ariaLabel: option.ariaLabel}).footer__bottom-bar-link
 
-  +popup('callback-popup', 'Заявка')
+  +popup('cart cart--side-cart', 'Корзина')
+    //+checkout
+    +cart
+
+  +popup('callback-popup', 'Заказать звонок')
     +contact-form()
 
