--- a/src/scss/global/mixins.scss
+++ b/src/scss/global/mixins.scss
@@ -6,7 +6,7 @@
 
 @mixin scrollbar {
   scrollbar-width: thin;
-  scrollbar-color: $bg-image transparent;
+  scrollbar-color: $border-fill transparent;
 
   &::-webkit-scrollbar {
     width: 8px;
@@ -17,7 +17,7 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $bg-image;
+    background-color: $border-fill;
     border-radius: 10px;
   }
 }
