--- a/src/scss/blocks/common/breadcrumbs.scss
+++ b/src/scss/blocks/common/breadcrumbs.scss
@@ -1,6 +1,11 @@
 .breadcrumbs {
   max-width: 100vw;
   user-select: none;
+  padding-top: 40px;
+
+  @include vp-tablet {
+    padding-top: 45px;
+  }
 
   &__inner {
     span {
