--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,6 +45,7 @@
 @import 'blocks/common/search-modal.scss';
 @import 'blocks/common/popup.scss';
 @import 'blocks/common/contact-form.scss';
+@import 'blocks/common/cart.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
