--- a/src/components/blocks/common/search-modal.pug
+++ b/src/components/blocks/common/search-modal.pug
@@ -15,6 +15,7 @@ mixin search-modal(className)
                 h3.search-modal__product-title 20111150 Мотор высокочастотный HSI5562P-R 0.35KW 220380V 12000RPM
                 span.search-modal__product-article Артитикул
                   b 7898
+                span.search-modal__product-price 1300 Руб.
 
         .search-modal__category
           .search-modal__title Категории
@@ -37,36 +38,7 @@ mixin search-modal(className)
                 h3.search-modal__product-title 20111150 Мотор высокочастотный HSI5562P-R 0.35KW 220380V 12000RPM
                 span.search-modal__product-article Артитикул
                   b 7898
-            li.search-modal__product-item
-              a.search-modal__link(href="/shop/single-product/")
-                img.search-modal__product-image(src="/images/product.png", width="300", height="100" alt="")
-                h3.search-modal__product-title 20111150 Мотор высокочастотный HSI5562P-R 0.35KW 220380V 12000RPM
-                span.search-modal__product-article Артитикул
-                  b 7898
-            li.search-modal__product-item
-              a.search-modal__link(href="/shop/single-product/")
-                img.search-modal__product-image(src="/images/product.png", width="300", height="100" alt="")
-                h3.search-modal__product-title 20111150 Мотор высокочастотный HSI5562P-R 0.35KW 220380V 12000RPM
-                span.search-modal__product-article Артитикул
-                  b 7898
-            li.search-modal__product-item
-              a.search-modal__link(href="/shop/single-product/")
-                img.search-modal__product-image(src="/images/product.png", width="300", height="100" alt="")
-                h3.search-modal__product-title 20111150 Мотор высокочастотный HSI5562P-R 0.35KW 220380V 12000RPM
-                span.search-modal__product-article Артитикул
-                  b 7898
-            li.search-modal__product-item
-              a.search-modal__link(href="/shop/single-product/")
-                img.search-modal__product-image(src="/images/product.png", width="300", height="100" alt="")
-                h3.search-modal__product-title 20111150 Мотор высокочастотный HSI5562P-R 0.35KW 220380V 12000RPM
-                span.search-modal__product-article Артитикул
-                  b 7898
-            li.search-modal__product-item
-              a.search-modal__link(href="/shop/single-product/")
-                img.search-modal__product-image(src="/images/product.png", width="300", height="100" alt="")
-                h3.search-modal__product-title 20111150 Мотор высокочастотный HSI5562P-R 0.35KW 220380V 12000RPM
-                span.search-modal__product-article Артитикул
-                  b 7898
+                span.search-modal__product-price 1300 Руб.
 
         .search-modal__cta
           .wrapper
