Side cart update

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -22,6 +22,7 @@ include ./blocks/common/search-modal
 include ./blocks/common/popup
 include ./blocks/common/contact-form
 include ./blocks/common/cart
+include ./blocks/common/checkout
 
 //- page-name..
 include ./blocks/index/intro
