--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -46,6 +46,7 @@
 @import 'blocks/common/popup.scss';
 @import 'blocks/common/contact-form.scss';
 @import 'blocks/common/cart.scss';
+@import 'blocks/common/checkout.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
