--- a/src/scss/ui/btn.scss
+++ b/src/scss/ui/btn.scss
@@ -1,9 +1,10 @@
-.btn {
+.btn,
+.button {
   cursor: pointer;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  padding: 10px 20px;
+  padding: 13px 20px;
 
   color: $white;
   background-color: $primary;
