--- a/src/scss/ui/input.scss
+++ b/src/scss/ui/input.scss
@@ -1,4 +1,7 @@
-.input {
+.input,
+textarea,
+.form-row input,
+.form-row textarea {
   font-family: inherit;
   padding: 15px 20px;
   font-size: 16px;
@@ -7,4 +10,9 @@
   box-sizing: border-box;
   background: #FCFCFC;
   width: 100%;
+}
+
+textarea.input,
+.form-row textarea {
+  resize: none;
 }
