--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -2,6 +2,11 @@
 include ./layout/header
 include ./layout/mobile-menu
 include ./layout/footer
+include ./layout/modal
+
+//- Modals
+include ./blocks/modals/modal-feedback
+
 
 
 //- BLOCKS -
