--- a/src/pages/sale-page.pug
+++ b/src/pages/sale-page.pug
@@ -22,3 +22,7 @@ block main
     +breadcrumbs(nameIitemsBreadcrumbs).sale-page__breadcrumbs
     +sale().sale-page__sale
     +viewed().sale-page__viewed
+
+block modals
+  +modal("modal--feedback")(data-modal="feedback")
+    +modal-feedback()
