--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,6 +30,9 @@
 
 // BLOCKS
 
+// modals
+@import 'blocks/modals/modal.scss';
+
 // common...
 @import 'blocks/common/manufacturers.scss';
 @import 'blocks/common/confidence.scss';
