--- a/src/scss/global/global.scss
+++ b/src/scss/global/global.scss
@@ -7,8 +7,6 @@
 html,
 body {
   margin: 0;
-  padding: 0;
-  min-height: 100vh;
 }
 
 html {
@@ -16,31 +14,29 @@ html {
   color: $black;
   font-weight: 400;
   font-size: 15px;
-  //scroll-behavior: smooth;
-  //scroll-padding-top: 100px;
-  //scrollbar-gutter: stable;
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  // оптимизация выравнивания шрифта относительно центра строки
-  text-rendering: optimizeLegibility;
-  // если по прежнему есть проблемы с выравниванием
-  // https://transfonter.org/ - включите настройку https://prnt.sc/12rnt6g и переконвертируйте шрифт
+  scroll-behavior: smooth;
+  scroll-padding-top: 100px;
+  scrollbar-gutter: stable;
 }
 
 body {
-  width: 100%;
-  height: 100%;
-  background-color: $white;
-  //display: grid;
+  display: grid;
   // grid-template-rows: 1fr min-content;
-  //grid-template-rows: min-content 1fr min-content;
+  grid-template-rows: min-content 1fr min-content;
 
   // display: flex;
   // flex-direction: column;
 
-  //min-height: 100vh;
+  min-height: 100vh;
+  overflow-x: hidden;
+  background-color: $white;
 }
+
+/*
+main {
+  flex-grow: 1;
+}
+*/
 
 video,
 img {
@@ -51,29 +47,6 @@ img {
 
 a {
   text-decoration: none;
-}
-
-textarea {
-  resize: none;
-}
-
-.wrapper-main {
-  position: relative;
-
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  min-height: calc(100 * var(--vh, 1vh));
-  overflow: hidden;
-
-  .header,
-  .footer {
-    flex-shrink: 0;
-  }
-
-  main {
-    flex-grow: 1;
-  }
 }
 
 .visually-hidden {
@@ -92,24 +65,3 @@ textarea {
 .locked {
   overflow: hidden;
 }
-
-// Утилитарные классы блокировки страницы для модальных окон, меню и т.д.
-.scroll-lock-ios {
-  position: fixed;
-
-  overflow: hidden;
-}
-
-.scroll-lock {
-  overflow: hidden;
-}
-
-.no-scrollbar {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
