--- a/src/pages/catalog.pug
+++ b/src/pages/catalog.pug
@@ -20,4 +20,4 @@ block main
 
     +breadcrumbs(nameIitemsBreadcrumbs).catalog__breadcrumbs
     +catalog-block().catalog__catalog-block
-    +viewed().catalog__viewed
+    +viewed()
