--- a/src/pages/contacts-page.pug
+++ b/src/pages/contacts-page.pug
@@ -22,4 +22,4 @@ block main
     +contacts-main-block().contacts-page__contacts-main-block
     +requisites().contacts-page__requisites
     +contacts-map().contacts-page__contacts-map
-    +viewed().contacts-page__viewed
+    +viewed()
