--- a/src/pages/news-article.pug
+++ b/src/pages/news-article.pug
@@ -22,4 +22,4 @@ block main
     +breadcrumbs(nameIitemsBreadcrumbs).breadcrumbs--item-white.news-article__breadcrumbs
     +article-banner().news-article__article-banner
     +article().news-article__article
-    +viewed().news-article__viewed
+    +viewed()
