--- a/src/pages/news.pug
+++ b/src/pages/news.pug
@@ -21,4 +21,4 @@ block main
 
     +breadcrumbs(nameIitemsBreadcrumbs).news__breadcrumbs
     +news-block().news__news-block
-    +viewed().news__viewed
+    +viewed()
