--- a/src/pages/product.pug
+++ b/src/pages/product.pug
@@ -25,4 +25,4 @@ block main
     +advantages().product__advantages
     +composition().product__composition
     +similar-product().product__similar-product
-    +viewed().product__viewed
+    +viewed()
