--- a/src/pages/shipping-payment-page.pug
+++ b/src/pages/shipping-payment-page.pug
@@ -22,4 +22,4 @@ block main
     +breadcrumbs(nameIitemsBreadcrumbs).shipping-payment-page__breadcrumbs
     +shipping().shipping-payment-page__shipping
     +payment().shipping-payment-page__payment
-    +viewed().shipping-payment-page__viewed
+    +viewed()
