--- a/src/pages/about-company.pug
+++ b/src/pages/about-company.pug
@@ -25,4 +25,4 @@ block main
     +confidence().about-company__confidence
     +gratitude().about-company__gratitude
     +cooperation().about-company__cooperation
-    +viewed().about-company__viewed
+    +viewed()
