--- a/src/pages/manufacturers-page.pug
+++ b/src/pages/manufacturers-page.pug
@@ -23,4 +23,4 @@ block main
     +manufacturers().manufacturers-page__manufacturers
     +video-vlog().manufacturers-page__video-vlog
     +certificates().manufacturers-page__certificates
-    +viewed().manufacturers-page__viewed
+    +viewed()
