--- a/src/pages/sale-page.pug
+++ b/src/pages/sale-page.pug
@@ -21,7 +21,7 @@ block main
 
     +breadcrumbs(nameIitemsBreadcrumbs).sale-page__breadcrumbs
     +sale().sale-page__sale
-    +viewed().sale-page__viewed
+    +viewed()
 
 block modals
   +modal("modal--feedback")(data-modal="feedback")
