--- a/src/scss/blocks/common/viewed.scss
+++ b/src/scss/blocks/common/viewed.scss
@@ -1,4 +1,5 @@
 .viewed {
+  margin-bottom: 110px;
   max-width: 100vw;
   color: $base;
 
@@ -13,5 +14,9 @@
     @include vp-tablet {
       margin-bottom: 50px;
     }
+  }
+
+  @include vp-tablet {
+    margin-bottom: 120px;
   }
 }
