fix(article): правит стили и разметку блока

--- a/src/components/blocks/news-article/article.pug
+++ b/src/components/blocks/news-article/article.pug
@@ -40,34 +40,27 @@ mixin article()
                 span Заключение
 
         .article__content
-          .article__context-section
 
-            .title.title--special-medium.article__title
-              h2 С&nbsp;другой стороны начало повседневной работы
+          h2 С&nbsp;другой стороны начало повседневной работы
 
-            .text.article__text
-              p
-                | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
-                | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
-                | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
+          p
+            | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
+            | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
+            | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
 
-            +video().article__video
+          img(src="/images/blogger.png", width='774', height='410', alt='Контентная картинка статьи.')
+          //- iframe(width="560", height="315", src="https://www.youtube.com/embed/pc2Bs3D7cts?si=MHCLlm0q5G2LqJit", title="YouTube video player", frameborder="0", allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share", referrerpolicy="strict-origin-when-cross-origin", allowfullscreen)
 
-            .text.article__text
-              p
-                | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
-                | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
-                | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
+          p
+            | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
+            | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
+            | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
 
-          .article__context-section
-            .title.title--special-medium.article__title
-              h2 Начало повседневной работы
+          h2 Начало повседневной работы
 
-            .text.article__text
-              p
-                | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
-                | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
-                | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
+          p
+            | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
+            | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
+            | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
 
-            .article__image
-              img(src="/images/blogger.png", width='774', height='410', alt='Контентная картинка статьи.')
+          img(src="/images/blogger.png", width='774', height='410', alt='Контентная картинка статьи.')
