feat(gifts-attachments): создает блок и подключает к главной

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -34,6 +34,7 @@ include ./blocks/index/intro
 include ./blocks/index/advantages
 include ./blocks/index/popular
 include ./blocks/index/news-company
+include ./blocks/index/gifts-attachments
 
 include ./blocks/product/card-product
 include ./blocks/product/composition
