--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -17,6 +17,7 @@ block main
 
     +intro().page-home__intro
     +advantages().page-home__advantages
+    +gifts-attachments().page-home__gifts-attachments
     +popular().page-home__popular
     +manufacturers().page-home__manufacturers
     +video-vlog().page-home__video-vlog
