--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -53,6 +53,7 @@
 @import 'blocks/index/advantages.scss';
 @import 'blocks/index/popular.scss';
 @import 'blocks/index/news-company.scss';
+@import 'blocks/index/gifts-attachments.scss';
 
 @import 'blocks/product/card-product.scss';
 @import 'blocks/product/composition.scss';
