--- a/src/scss/ui/title.scss
+++ b/src/scss/ui/title.scss
@@ -43,6 +43,17 @@
     }
   }
 
+  &--medium-uppercase {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 120%;
+    text-transform: uppercase;
+
+    @include vp-tablet {
+      font-size: 30px;
+    }
+  }
+
   &--medium-litle {
     font-weight: 500;
     font-size: 24px;
