--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -7,6 +7,7 @@ $logo-text: #6d658d;
 $secondary: #909090;
 $bg-intro: #055b5c;
 $bg-image: #814793;
+$bg-disabled: #d9d9d9;
 $accent-title: #fecb5e;
 $accent-bg-items: #ffdf85;
 $accent-bg-items-hover: #ffd151;
@@ -15,6 +16,7 @@ $base-bg-btn: #f8f8f8;
 $accent-link: #e72222;
 $blur-bg: #fff4fe;
 $border-fill: #e2e3e5;
+$border-fill-dark: #cecfd1;
 $base: #111111;
 $grey: #727272;
 
