--- a/src/components/blocks/product/card-product.pug
+++ b/src/components/blocks/product/card-product.pug
@@ -87,13 +87,15 @@ mixin card-product()
                   b Цена: #[strong 1300 руб.]
 
                 .card-product__quantity-set
-                  button.card-product__quantity-btn.card-product__quantity-btn--decrease(type="button")
-                    span
 
-                  input(type="number", name="quantity", value="1", min="1", max="100")
-
-                  button.card-product__quantity-btn.card-product__quantity-btn--increase(type="button")
-                    span
+                  form.card-product__quantity-form(action="#", method="post")
+                    input(type="hidden", name="cart_quantity_key", value="")
+                    .card-product__quantity-wrapper
+                      button.card-product__quantity-decrease(type="button", data-item-key="", disabled)
+                        span
+                      input.card-product__quantity-value(type="number", name="cart_quantity", value="1", min="1", max="100", step="1", data-item-key="")
+                      button.card-product__quantity-increase(type="button", data-item-key="")
+                        span
 
               .card-product__buttons-wrapper
 
