fix(composition): правит отступ стики меню

--- a/src/scss/blocks/product/composition.scss
+++ b/src/scss/blocks/product/composition.scss
@@ -58,7 +58,7 @@
 
     @include vp-tablet-landscape {
       position: sticky;
-      top: 0;
+      top: 164px;
       z-index: 2;
       padding: 40px 25px 35px;
 
