--- a/src/components/blocks/index/gifts-attachments.pug
+++ b/src/components/blocks/index/gifts-attachments.pug
@@ -55,7 +55,7 @@ mixin gifts-attachments()
 
 
         .gifts-attachments__category-inner.gifts-attachments__category-inner--gifts
-          .title.title--medium-uppercase.gifts-attachments__inner-title
+          a.title.title--medium-uppercase.gifts-attachments__inner-title(href="#", aria-label="Переход в категорию подарков")
             h3 ПОДАРКИ
             +img("category-gifts", "png", 204, 145, "Иконка категории.")
 
@@ -63,11 +63,11 @@ mixin gifts-attachments()
 
             each option in optionsGifts
               li.gifts-attachments__item
-                +btn({href: option.linkItem}).btn--border-clear.gifts-attachments__btn(aria-label="Переход в раздел подарков")
+                +btn({href: option.linkItem}).btn--border-clear.gifts-attachments__btn(aria-label="Переход в раздел в категории подарков")
                   span!= option.nameItem
 
         .gifts-attachments__category-inner.gifts-attachments__category-inner--attachments
-          .title.title--medium-uppercase.gifts-attachments__inner-title
+          a.title.title--medium-uppercase.gifts-attachments__inner-title(href="#", aria-label="Переход в категорию вложения")
             h3 ВЛОЖЕНИЯ
             +img("category-attachments", "png", 204, 145, "Иконка категории.")
 
@@ -75,5 +75,5 @@ mixin gifts-attachments()
 
             each option in optionsAttachments
               li.gifts-attachments__item
-                +btn({href: option.linkItem}).btn--border-clear.gifts-attachments__btn(aria-label="Переход в раздел подарков")
+                +btn({href: option.linkItem}).btn--border-clear.gifts-attachments__btn(aria-label="Переход в раздел в категории вложения")
                   span!= option.nameItem
