--- a/src/scss/blocks/index/gifts-attachments.scss
+++ b/src/scss/blocks/index/gifts-attachments.scss
@@ -68,6 +68,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: $base;
     background-color: $accent-bg-items;
     border-radius: 8px;
 
